[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/images/judge-card.png" type="Texture" id=1]
[ext_resource path="res://menus/JudgeCard.gd" type="Script" id=2]
[ext_resource path="res://menus/default_theme.tres" type="Theme" id=3]

[sub_resource type="Animation" id=1]
resource_name = "flip_card"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.1, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "flipCardTexture"
} ]
}

[node name="JudgeCard" type="TextureRect"]
margin_right = 48.0
margin_bottom = 64.0
rect_scale = Vector2( 0.82, 1 )
texture = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/flip_card = SubResource( 1 )

[node name="FlipTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="FlipTimer" to="." method="_on_FlipTimer_timeout"]
